# FitnesApp

./: pyproject.toml
migrations/: env.py
src/fitnesapp/: config.py
